# fair

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build-and-test.yml
cmake/: compile_and_run.cmake  config.cmake.in
source/: CMakeLists.txt
source/fair/: CMakeLists.txt  array_ref.c  array_ref.h  dynamic_array.c  dynamic_array.h  fair.c  fair.cpp  fair.h  memory.c  memory.h
source/standalone/: CMakeLists.txt  main.c  main.cpp
source/test/: CMakeLists.txt
source/test/integration/fetch_content/: CMakeLists.txt  main.c  main.cpp
source/test/integration/find_package/: CMakeLists.txt
source/test/integration/find_package/source/: CMakeLists.txt
source/test/unittests/: CMakeLists.txt  array_ref.test.c  dynamic_array.test.c  fair.test.c  main.test.c  test.h
test/: blank.fair  empty.fair
tools/: gen-cmake.py
